--- a/BackendLab1/src/main/resources/application.properties
+++ b/BackendLab1/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 DB_URL=jdbc:postgresql://localhost:5432/lab1bda
 USER=postgres
-PASSWORD=Vitoco2003!
+PASSWORD=1234
 
 #spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
 #spring.datasource.driver-class-name=org.postgresql.Driver
