--- a/BackendLab1/pom.xml
+++ b/BackendLab1/pom.xml
@@ -116,6 +116,11 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>3.3.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.locationtech.jts</groupId>
+			<artifactId>jts-core</artifactId>
+			<version>1.18.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
